tests/ui/imports/macros.stderr
error[E0659]: `m` is ambiguous
  --> $DIR/macros.rs:16:5
   |
LL |     m! {
   |     ^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and a macro-expanded name in the same module during import or macro resolution
note: `m` could refer to the macro imported here
  --> $DIR/macros.rs:17:13
   |
LL |         use crate::foo::m;
   |             ^^^^^^^^^^^^^
note: `m` could also refer to the macro imported here
  --> $DIR/macros.rs:15:9
   |
LL |     use two_macros::*;
   |         ^^^^^^^^^^^^^
   = help: consider adding an explicit import of `m` to disambiguate

error[E0659]: `m` is ambiguous
  --> $DIR/macros.rs:29:9
   |
LL |         m! {
   |         ^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro imported here
  --> $DIR/macros.rs:30:17
   |
LL |             use two_macros::n as m;
   |                 ^^^^^^^^^^^^^^^^^^
note: `m` could also refer to the macro imported here
  --> $DIR/macros.rs:22:9
   |
LL |     use two_macros::m;
   |         ^^^^^^^^^^^^^
   = help: use `self::m` to refer to this macro unambiguously

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0659`.
